--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "5.0.1",
     "@angular/platform-browser-dynamic": "5.0.1",
     "@ionic-native/core": "4.4.0",
+    "@ionic-native/facebook": "^4.4.2",
     "@ionic-native/geolocation": "^4.4.2",
+    "@ionic-native/google-plus": "^4.4.2",
     "@ionic-native/native-geocoder": "^4.4.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
@@ -31,12 +33,14 @@
     "cordova-ios": "4.5.4",
     "cordova-plugin-add-swift-support": "^1.7.0",
     "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-facebook4": "^1.9.1",
+    "cordova-plugin-googleplus": "^5.1.1",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-nativegeocoder": "^2.0.4",
     "cordova-plugin-request-location-accuracy": "^2.2.2",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-whitelist": "^1.3.1",
-    "firebase": "^4.6.2",
+    "firebase": "^4.8.0",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
@@ -60,7 +64,12 @@
       "cordova-plugin-nativegeocoder": {
         "LOCATION_WHEN_IN_USE_DESCRIPTION": "Use geocoder service"
       },
-      "cordova-plugin-request-location-accuracy": {}
+      "cordova-plugin-request-location-accuracy": {},
+      "cordova-plugin-googleplus": {},
+      "cordova-plugin-facebook4": {
+        "APP_ID": "407839889634958",
+        "APP_NAME": "Project-Design"
+      }
     },
     "platforms": [
       "ios",
