--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.4",
+    "firebase": "4.8.0",
     "angularfire2-offline": "^4.3.1",
     "cordova-android": "^6.3.0",
     "cordova-ios": "4.5.4",
@@ -42,7 +43,6 @@
     "cordova-plugin-request-location-accuracy": "^2.2.2",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-whitelist": "^1.3.3",
-    "firebase": "^4.8.1",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
