--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cordova-plugin-facebook4": "^1.9.1",
     "cordova-plugin-geolocation": "^3.0.0",
     "cordova-plugin-googleplus": "^5.1.1",
+    "cordova-plugin-inappbrowser": "^2.0.1",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-nativegeocoder": "^2.0.4",
     "cordova-plugin-request-location-accuracy": "^2.2.2",
@@ -53,6 +54,7 @@
     "rxjs": "5.5.2",
     "sdk": "^0.5.0",
     "sw-toolbox": "3.6.0",
+    "twit": "^2.2.9",
     "typings": "^2.1.1",
     "xml2js": "^0.4.19",
     "zone.js": "0.8.18"
@@ -78,7 +80,8 @@
         "APP_ID": "407839889634958",
         "APP_NAME": "Project-Design"
       },
-      "cordova-plugin-geolocation": {}
+      "cordova-plugin-geolocation": {},
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "android",
