--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@angular/platform-browser": "5.0.1",
     "@angular/platform-browser-dynamic": "5.0.1",
     "@ionic-native/core": "4.4.0",
-    "@ionic-native/facebook": "^4.4.2",
+    "@ionic-native/facebook": "^4.5.2",
     "@ionic-native/geolocation": "^4.4.2",
-    "@ionic-native/google-plus": "^4.4.2",
+    "@ionic-native/google-plus": "^4.5.2",
     "@ionic-native/in-app-browser": "^4.5.2",
     "@ionic-native/native-geocoder": "^4.4.2",
     "@ionic-native/splash-screen": "^4.4.0",
@@ -32,7 +32,7 @@
     "@ionic/storage": "2.1.3",
     "angular": "^1.6.8",
     "angularfire2": "^5.0.0-rc.4",
-    "angularfire2-offline": "^4.3.1",
+    "angularfire2r-offline": "^4.3.1",
     "cordova-android": "^6.4.0",
     "cordova-ios": "4.5.4",
     "cordova-plugin-add-swift-support": "^1.7.0",
@@ -46,20 +46,11 @@
     "cordova-plugin-request-location-accuracy": "^2.2.2",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-whitelist": "^1.3.3",
-<<<<<<< HEAD
-    "firebase": "4.8.0",
-    "ionic-angular": "3.9.2",
-    "ionic-plugin-keyboard": "^2.2.1",
-    "ionicons": "3.0.0",
-    "node-sass": "^4.7.2",
-=======
     "firebase": "^4.8.0",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "ng2-twitter": "^0.3.0",
-    "nodesass": "0.0.2-security",
->>>>>>> 30be0b0acd272a5215196b1b90b9d432d439b96c
     "rxjs": "5.5.2",
     "sdk": "^0.5.0",
     "sw-toolbox": "3.6.0",
@@ -84,7 +75,9 @@
         "LOCATION_WHEN_IN_USE_DESCRIPTION": "Use geocoder service"
       },
       "cordova-plugin-request-location-accuracy": {},
-      "cordova-plugin-googleplus": {},
+      "cordova-plugin-googleplus": {
+        "REVERSED_CLIENT_ID": "com.googleusercontent.apps.308539296287-elic70lfie8pct2l8q9t5im6djs2oi62"
+      },
       "cordova-plugin-facebook4": {
         "APP_ID": "407839889634958",
         "APP_NAME": "Project-Design"
